--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
     <title>Study Buddy</title>
 </head>
 <body>
-    
+    <header>
+        <h1>
+            Study Buddy
+        </h1>
+    </header>
 </body>
 </html>
