--- a/src/index.html
+++ b/src/index.html
@@ -13,5 +13,9 @@
             Study Buddy
         </h1>
     </header>
+
+    <button id="calendar-button">
+        Calendar
+    </button>
 </body>
 </html>
