Added practice button with styling

--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,15 @@
         </h1>
     </header>
 
-    <button id="calendar-button">
-        Calendar
-    </button>
+    <div>
+        <button class="nav-button" id="calendar-button">
+            Calendar
+        </button>
+
+        <button class="nav-button" id="practice-button">
+            Practice
+        </button>
+    </div>
+
 </body>
 </html>
