Added links to calendar and practice buttons to go to other pages with styling

--- a/src/index.html
+++ b/src/index.html
@@ -15,13 +15,13 @@
     </header>
 
     <div>
-        <button class="nav-button" id="calendar-button">
+        <a href="calendar.html" id="calendar-button">
             Calendar
-        </button>
+        </a>
 
-        <button class="nav-button" id="practice-button">
+        <a href="practice.html" id="practice-button">
             Practice
-        </button>
+        </a>
     </div>
 
 </body>
