Added header to calendar and practice page that acts as a home button

--- a/src/index.html
+++ b/src/index.html
@@ -15,11 +15,11 @@
     </header>
 
     <div>
-        <a href="calendar.html" id="calendar-button">
+        <a href="calendar.html" class="nav-button" id="calendar-button">
             Calendar
         </a>
 
-        <a href="practice.html" id="practice-button">
+        <a href="practice.html" class="nav-button" id="practice-button">
             Practice
         </a>
     </div>
