Created front of flash card

--- a/src/practice.html
+++ b/src/practice.html
@@ -16,6 +16,12 @@
             </h1>
         </a>
     </header>
+
+    <section>
+        <div class="flashcard">
+            <div id="flashcard-front">Demo text</div>
+        </div>
+    </section>
     
 </body>
 </html>
