--- a/src/practice.html
+++ b/src/practice.html
@@ -18,8 +18,10 @@
     </header>
 
     <section>
-        <div class="flashcard">
-            <div id="flashcard-front">Demo text</div>
+        <div class="flash-card-position">
+            <div class="flashcard">
+                <div id="flashcard-front">Demo text</div>
+            </div>
         </div>
     </section>
     
