Added arrow buttons for left and right flashcard

--- a/src/practice.html
+++ b/src/practice.html
@@ -20,7 +20,14 @@
     <section>
         <div class="flash-card-position">
             <div class="flashcard">
-                <div id="flashcard-front">Demo text</div>
+                <div id="flashcard-number">1/10</div>
+
+                <div id="flashcard-middle">
+                    <div id="left-flashcard-button">&lt</div>
+                    <div id="flashcard-front-text">Demo text</div>
+                    <div id="right-flashcard-button">&gt</div>
+                </div>
+                
             </div>
         </div>
     </section>
