Added flashcards and quiz generation options

--- a/src/practice.html
+++ b/src/practice.html
@@ -17,6 +17,13 @@
         </a>
     </header>
 
+    <div class="options">
+        <div class="flashcards-option">Flash Cards</div>
+        <div class="quiz-option">
+            <input id="quiz-topic-textbox" type="text" placeholder="Type topic to create quiz about here">
+        </div>
+    </div>
+
     <section>
         <div class="flash-card-position">
             <div class="flashcard">
@@ -27,7 +34,7 @@
                     <div id="flashcard-front-text">Demo text</div>
                     <div id="right-flashcard-button">&gt</div>
                 </div>
-                
+
             </div>
         </div>
     </section>
