Added generate quiz button and added onhover change button colour event script to flash cards button

--- a/src/practice.html
+++ b/src/practice.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -18,10 +17,11 @@
     </header>
 
     <div class="options">
-        <div class="flashcards-option">Flash Cards</div>
+        <button class="flashcards-option">Flash Cards</button>
         <div class="quiz-option">
             <input id="quiz-topic-textbox" type="text" placeholder="Type topic to create quiz about here">
         </div>
+        <button class="generate-quiz-button">Generate Quiz</button>
     </div>
 
     <section>
@@ -38,6 +38,8 @@
             </div>
         </div>
     </section>
-    
+    <script src="script.js"></script>
 </body>
+
+
 </html>
