Added layout for quiz questions

--- a/src/practice.html
+++ b/src/practice.html
@@ -38,6 +38,46 @@
             </div>
         </div>
     </section>
+
+    <section>
+        <div class="quiz-position">
+            <div class="quiz">
+                <div class="quiz-question">
+                    Question
+                </div>
+                <div class="quiz-question">
+                    Question
+                </div>
+                <div class="quiz-question">
+                    Question
+                </div>
+                <div class="quiz-question">
+                    Question
+                </div>
+                <div class="quiz-question">
+                    Question
+                </div>
+                <div class="quiz-question">
+                    Question
+                </div>
+                <div class="quiz-question">
+                    Question
+                </div>
+                
+                <div class="quiz-question">
+                    Question
+                </div>
+                <div class="quiz-question">
+                    Question
+                </div>
+                <div class="quiz-question">
+                    Question
+                </div>
+            </div>
+            
+        </div>
+    </section>
+
     <script src="script.js"></script>
 </body>
 
