Added flashcard edit menu and toggle button to display the menu

--- a/src/practice.html
+++ b/src/practice.html
@@ -39,8 +39,41 @@
         </div>
         <div class="edit-button-position">
             <button id="edit-flashcards-button">Edit</button>
+            
         </div>
+
     </section>
+
+    <div class="edit-flashcards-menu-position">
+        <div class="edit-flashcards-menu">
+            <div class="edit-front">
+                <div>Front</div>
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+            </div>
+            <div class="edit-back">
+                <div>Back</div>
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+            </div>
+        </div>
+    </div>
 
     <section>
         <div class="quiz-position">
