made left and right flashcard buttons update the text to the correct flashcard info

--- a/src/practice.html
+++ b/src/practice.html
@@ -30,9 +30,9 @@
                 <div id="flashcard-number">1/10</div>
 
                 <div id="flashcard-middle">
-                    <div id="left-flashcard-button">&lt</div>
+                    <button id="left-flashcard-button">&lt</button>
                     <div id="flashcard-front-text">Demo text</div>
-                    <div id="right-flashcard-button">&gt</div>
+                    <button id="right-flashcard-button">&gt</button>
                 </div>
 
             </div>
