Fixed the click box for flipping the flash cards

--- a/src/practice.html
+++ b/src/practice.html
@@ -35,6 +35,8 @@
                     <button id="right-flashcard-button">&gt</button>
                 </div>
 
+                <div class="flashcard-flip-clickbox"></div>
+
             </div>
         </div>
         <div class="edit-button-position">
