placed finished editting button for flashcards in edit menu

--- a/src/practice.html
+++ b/src/practice.html
@@ -41,7 +41,6 @@
         </div>
         <div class="edit-button-position">
             <button id="edit-flashcards-button">Edit</button>
-            
         </div>
 
     </section>
@@ -76,6 +75,11 @@
             </div>
         </div>
     </div>
+
+    <!--Add Done button for edit menu to submit changes then upate the js array-->
+    <button id="done-edit-button">
+        Done
+    </button>
 
     <section>
         <div class="quiz-position">
