Added placeholder text and ids for the input fields for the edit menu

--- a/src/practice.html
+++ b/src/practice.html
@@ -49,37 +49,35 @@
         <div class="edit-flashcards-menu">
             <div class="edit-front">
                 <div>Front</div>
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
+                <input type="text" id="front1" placeholder="Front of flash card 1">
+                <input type="text" id="front2" placeholder="Front of flash card 2">
+                <input type="text" id="front3" placeholder="Front of flash card 3">
+                <input type="text" id="front4" placeholder="Front of flash card 4">
+                <input type="text" id="front5" placeholder="Front of flash card 5">
+                <input type="text" id="front6" placeholder="Front of flash card 6">
+                <input type="text" id="front7" placeholder="Front of flash card 7">
+                <input type="text" id="front8" placeholder="Front of flash card 8">
+                <input type="text" id="front9" placeholder="Front of flash card 9">
+                <input type="text" id="front10" placeholder="Front of flash card 10">
             </div>
             <div class="edit-back">
                 <div>Back</div>
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
+                <input type="text" id="back1" placeholder="Back of flash card 1">
+                <input type="text" id="back2" placeholder="Back of flash card 2">
+                <input type="text" id="back3" placeholder="Back of flash card 3">
+                <input type="text" id="back4" placeholder="Back of flash card 4">
+                <input type="text" id="back5" placeholder="Back of flash card 5">
+                <input type="text" id="back6" placeholder="Back of flash card 6">
+                <input type="text" id="back7" placeholder="Back of flash card 7">
+                <input type="text" id="back8" placeholder="Back of flash card 8">
+                <input type="text" id="back9" placeholder="Back of flash card 9">
+                <input type="text" id="back10" placeholder="Back of flash card 10">
             </div>
         </div>
     </div>
 
     <!--Add Done button for edit menu to submit changes then upate the js array-->
-    <button id="done-edit-button">
-        Done
-    </button>
+    <input type="submit" id="done-edit-button">
 
     <section>
         <div class="quiz-position">
