--- a/src/practice.html
+++ b/src/practice.html
@@ -31,7 +31,7 @@
 
                 <div id="flashcard-middle">
                     <button id="left-flashcard-button">&lt</button>
-                    <div id="flashcard-front-text">Demo text</div>
+                    <div id="flashcard-front-text"></div>
                     <button id="right-flashcard-button">&gt</button>
                 </div>
 
@@ -44,6 +44,7 @@
         </div>
 
     </section>
+
 
     <div class="edit-flashcards-menu-position">
         <div class="edit-flashcards-menu">
@@ -77,7 +78,6 @@
     </div>
 
     <!--Add Done button for edit menu to submit changes then upate the js array-->
-    <input type="submit" id="done-edit-button">
 
     <section>
         <div class="quiz-position">
