Cleaned up script file

--- a/src/practice.html
+++ b/src/practice.html
@@ -78,6 +78,7 @@
     </div>
 
     <!--Add Done button for edit menu to submit changes then upate the js array-->
+    <button id="done-edit-button">Done</button>
 
     <section>
         <div class="quiz-position">
