Fixed flashcard option displaying automatically when page loads

--- a/src/practice.html
+++ b/src/practice.html
@@ -24,7 +24,7 @@
         <button class="generate-quiz-button">Generate Quiz</button>
     </div>
 
-    <section class="flashcard-section">
+    <section class="flash-card-section">
         <div class="flash-card-position">
             <div class="flashcard">
                 <div id="flashcard-number">1/10</div>
