--- a/src/practice.html
+++ b/src/practice.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Practice</title>
 </head>
 <body>
 
@@ -24,8 +24,8 @@
         <button class="generate-quiz-button">Generate Quiz</button>
     </div>
 
-    <section class="flash-card-section">
-        <div class="flash-card-position">
+    <section class="flashcard-section">
+        <div class="flashcard-position">
             <div class="flashcard">
                 <div id="flashcard-number">1/10</div>
 
@@ -42,9 +42,7 @@
         <div class="edit-button-position">
             <button id="edit-flashcards-button">Edit</button>
         </div>
-
     </section>
-
 
     <div class="edit-flashcards-menu-position">
         <div class="edit-flashcards-menu">
@@ -86,7 +84,6 @@
                     Question
                 </div>
             </div>
-            
         </div>
     </section>
 
