Implemented unit tests for flash card scripts and renamed file to flashcardscripts.js

--- a/src/practice.html
+++ b/src/practice.html
@@ -87,7 +87,7 @@
         </div>
     </section>
 
-    <script src="script.js"></script>
+    <script src="flashcardscripts.js"></script>
 </body>
 
 </html>
