Added shuffle flash cards button

--- a/src/practice.html
+++ b/src/practice.html
@@ -39,8 +39,13 @@
 
             </div>
         </div>
+        
+        <div class="shuffle-flashcards-button-position">
+            <button class="shuffle-flashcards-button">Shuffle</button>
+        </div>
+
         <div class="edit-button-position">
-            <button id="edit-flashcards-button">Edit</button>
+            <button class="edit-flashcards-button">Edit</button>
         </div>
     </section>
 
