Added hover change colour effect to left and right buttons

--- a/src/practice.html
+++ b/src/practice.html
@@ -30,9 +30,9 @@
                 <div id="flashcard-number">1/10</div>
 
                 <div id="flashcard-middle">
-                    <button id="left-flashcard-button">&lt</button>
+                    <button class="left-flashcard-button">&lt</button>
                     <div id="flashcard-front-text"></div>
-                    <button id="right-flashcard-button">&gt</button>
+                    <button class="right-flashcard-button">&gt</button>
                 </div>
 
                 <div class="flashcard-flip-clickbox"></div>
