Added fade in and fade out animations

--- a/src/practice.html
+++ b/src/practice.html
@@ -82,7 +82,7 @@
 
     <button id="done-edit-button">Done</button>
 
-    <section>
+    <section class="quiz-section">
         <div class="quiz-position">
             <div class="quiz">
                 <div class="quiz-question">
