adds reminders (output to console) to calendarscripts.js

--- a/src/calendar.html
+++ b/src/calendar.html
@@ -15,6 +15,17 @@
     </header>
 
     <div id="calendar"></div>
+    <!-- Reminder Display Section -->
+<div id="reminder-display">
+    <h2>Triggered Reminders</h2>
+    <ul id="reminder-list"></ul>
+</div>
+    <label for="reminder-frequency">Set Reminder Frequency:</label>
+<select id="reminder-frequency">
+    <option value="daily">Daily</option>
+    <option value="weekly">Weekly</option>
+    <option value="monthly">Monthly</option>
+</select>
 
     <button id="sortByDate">Sort by Date</button>
     <button id="sortByTitle">Sort by Title</button>
