Added html placeholders for each question

--- a/src/practice.html
+++ b/src/practice.html
@@ -85,9 +85,107 @@
     <section class="quiz-section">
         <div class="quiz-position">
             <div class="quiz">
-                <div class="quiz-question">
-                    Question
+
+                <div class="quiz-question-card">
+                    <div class="q1">1. Demo question</div>
+                    <div class="multiple-choice-options">
+                        <div id="q1a">a. test</div>
+                        <div id="q1b">a. test</div>
+                        <div id="q1c">a. test</div>
+                        <div id="q1d">a. test</div>
+                    </div>
                 </div>
+
+                <div class="quiz-question-card">
+                    <div class="q2">1. Demo question</div>
+                    <div class="multiple-choice-options">
+                        <div id="q2a">a. test</div>
+                        <div id="q2b">a. test</div>
+                        <div id="q2c">a. test</div>
+                        <div id="q2d">a. test</div>
+                    </div>
+                </div>
+
+                <div class="quiz-question-card">
+                    <div class="q3">1. Demo question</div>
+                    <div class="multiple-choice-options">
+                        <div id="q3a">a. test</div>
+                        <div id="q3b">a. test</div>
+                        <div id="q3c">a. test</div>
+                        <div id="q3d">a. test</div>
+                    </div>
+                </div>
+
+                <div class="quiz-question-card">
+                    <div class="q4">1. Demo question</div>
+                    <div class="multiple-choice-options">
+                        <div id="q4a">a. test</div>
+                        <div id="q4b">a. test</div>
+                        <div id="q4c">a. test</div>
+                        <div id="q4d">a. test</div>
+                    </div>
+                </div>
+
+                <div class="quiz-question-card">
+                    <div class="q5">1. Demo question</div>
+                    <div class="multiple-choice-options">
+                        <div id="q5a">a. test</div>
+                        <div id="q5b">a. test</div>
+                        <div id="q5c">a. test</div>
+                        <div id="q5d">a. test</div>
+                    </div>
+                </div>
+
+                <div class="quiz-question-card">
+                    <div class="q6">1. Demo question</div>
+                    <div class="multiple-choice-options">
+                        <div id="q6a">a. test</div>
+                        <div id="q6b">a. test</div>
+                        <div id="q6c">a. test</div>
+                        <div id="q6d">a. test</div>
+                    </div>
+                </div>
+
+                <div class="quiz-question-card">
+                    <div class="q7">1. Demo question</div>
+                    <div class="multiple-choice-options">
+                        <div id="q7a">a. test</div>
+                        <div id="q7b">a. test</div>
+                        <div id="q7c">a. test</div>
+                        <div id="q7d">a. test</div>
+                    </div>
+                </div>
+
+                <div class="quiz-question-card">
+                    <div class="q8">1. Demo question</div>
+                    <div class="multiple-choice-options">
+                        <div id="q8a">a. test</div>
+                        <div id="q8b">a. test</div>
+                        <div id="q8c">a. test</div>
+                        <div id="q8d">a. test</div>
+                    </div>
+                </div>
+
+                <div class="quiz-question-card">
+                    <div class="q9">1. Demo question</div>
+                    <div class="multiple-choice-options">
+                        <div id="q9a">a. test</div>
+                        <div id="q9b">a. test</div>
+                        <div id="q9c">a. test</div>
+                        <div id="q9d">a. test</div>
+                    </div>
+                </div>
+
+                <div class="quiz-question-card">
+                    <div class="q10">1. Demo question</div>
+                    <div class="multiple-choice-options">
+                        <div id="q10a">a. test</div>
+                        <div id="q10b">a. test</div>
+                        <div id="q10c">a. test</div>
+                        <div id="q10d">a. test</div>
+                    </div>
+                </div>
+                
             </div>
         </div>
     </section>
