--- a/src/calendar.html
+++ b/src/calendar.html
@@ -12,41 +12,82 @@
         <a href="./index.html">
             <h1>Study Buddy</h1>
         </a>
+
         <!-- Notification Bell -->
         <div id="notification-container" class="notification-container">
-            <span id="notification-bell" class="notification-bell">!</span>
+            <span id="notification-bell" class="notification-bell">🤷‍♀️</span>
             <span id="notification-count" class="notification-count">0</span>
             <div id="notification-dropdown" class="notification-dropdown">
                 <h3>Reminders</h3>
                 <ul id="notification-list"></ul>
             </div>
         </div>
+
         <!-- Create Event Button -->
         <button id="create-event-button">Create Event</button>
     </header>
+
     <!-- Calendar -->
     <div id="calendar"></div>
+
     <!-- Reminder Display Section -->
     <div id="reminder-display">
         <h2>Reminders:</h2>
         <ul id="reminder-list"></ul>
     </div>
-    <!-- Reminder Interval Setup -->
-<label for="remind-before-number">Remind me </label>
-<input type="number" id="remind-before-number" min="1" value="10" style="width: 60px;"> <!-- Default to 10 intervals -->
-<select id="remind-before-type">
-    <option value="minutes">minutes</option>
-    <option value="hours">hours</option>
-    <option value="days" selected>days</option>
-    <option value="weeks">weeks</option>
-</select>
-<span> before the event</span>
-    <!-- Toast Container -->
 
+    <!-- Sidebar for Event Creation -->
+    <div id="event-sidebar" class="event-sidebar">
+        <h2>Create Event</h2>
+
+        <!-- Title Input -->
+        <label for="event-title">Title:</label>
+        <input type="text" id="event-title" name="event-title" placeholder="Enter event title" required>
+
+        <!-- Date Picker -->
+        <label for="event-date">Date:</label>
+        <input type="date" id="event-date" name="event-date" required>
+
+        <!-- Start and End Time Container -->
+        <div class="time-container">
+
+            <!-- Start Time -->
+            <div class="time-input">
+                <label for="event-start-time">Start Time:</label>
+                <input type="time" id="event-start-time" name="event-start-time" required>
+            </div>
+
+            <!-- End Time -->
+            <div class="time-input">
+                <label for="event-end-time">End Time:</label>
+                <input type="time" id="event-end-time" name="event-end-time" required>
+            </div>
+
+        </div>
+
+        <!-- Create Event Button -->
+        <button type="button" id="create-event">Create</button>
+
+    </div>
+
+    <!-- Reminder Interval Setup -->
+    <label for="remind-before-number">Remind me </label>
+    <input type="number" id="remind-before-number" min="1" value="10" style="width: 60px;"> <!-- Default to 10 intervals -->
+    <select id="remind-before-type">
+        <option value="minutes">minutes</option>
+        <option value="hours">hours</option>
+        <option value="days" selected>days</option>
+        <option value="weeks">weeks</option>
+    </select>
+    <span> before the event</span>
+
+    <!-- Toast Container -->
     <button id="sortByDate">Sort by Date</button>
     <button id="sortByTitle">Sort by Title</button>
     <input type="text" id="filterKeyword" placeholder="Filter by keyword">
+
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/index.global.min.js"></script>
     <script src="calendarscripts.js"></script>
+
 </body>
 </html>
