Added quiz objects and moved gen quiz button to quiz script file

--- a/src/practice.html
+++ b/src/practice.html
@@ -102,7 +102,6 @@
                         <input type="radio" name="q1" id="q1d" value="">
                         <label for="q1d">d. test</label>
 
-
                     </div>
                 </div>
 
@@ -113,6 +112,7 @@
     </section>
 
     <script src="flashcardscripts.js"></script>
+    <script src="quizscripts.js"></script>
 </body>
 
 </html>
