setup gemini api and stored questions from response into object

--- a/src/practice.html
+++ b/src/practice.html
@@ -112,7 +112,7 @@
     </section>
 
     <script src="flashcardscripts.js"></script>
-    <script src="quizscripts.js"></script>
+    <script type="module" src="quizscripts.js"></script>
 </body>
 
 </html>
