--- a/src/practice.html
+++ b/src/practice.html
@@ -87,10 +87,10 @@
             <div class="quiz">
 
                 <div class="quiz-question-card">
-                    <div class="q1">1. Demo question</div>
+                    <div class="question"></div>
                     <div class="multiple-choice-options">
 
-                        <input type="radio" name="q1" id="q1a" value="">
+                        <!--<input type="radio" name="q1" id="q1a" value="">
                         <label for="q1a">a. test</label>
 
                         <input type="radio" name="q1" id="q1b" value="">
@@ -100,9 +100,37 @@
                         <label for="q1c">c. test</label>
 
                         <input type="radio" name="q1" id="q1d" value="">
-                        <label for="q1d">d. test</label>
+                        <label for="q1d">d. test</label>-->
 
                     </div>
+                </div>
+
+                <div class="quiz-question-card">
+                    <div class="question"></div>
+                </div>
+                <div class="quiz-question-card">
+                    <div class="question"></div>
+                </div>
+                <div class="quiz-question-card">
+                    <div class="question"></div>
+                </div>
+                <div class="quiz-question-card">
+                    <div class="question"></div>
+                </div>
+                <div class="quiz-question-card">
+                    <div class="question"></div>
+                </div>
+                <div class="quiz-question-card">
+                    <div class="question"></div>
+                </div>
+                <div class="quiz-question-card">
+                    <div class="question"></div>
+                </div>
+                <div class="quiz-question-card">
+                    <div class="question"></div>
+                </div>
+                <div class="quiz-question-card">
+                    <div class="question"></div>
                 </div>
 
                
