--- a/src/practice.html
+++ b/src/practice.html
@@ -88,50 +88,20 @@
 
                 <div class="quiz-question-card">
                     <div class="question"></div>
+
                     <div class="multiple-choice-options">
 
-                        <!--<input type="radio" name="q1" id="q1a" value="">
-                        <label for="q1a">a. test</label>
-
-                        <input type="radio" name="q1" id="q1b" value="">
-                        <label for="q1b">b. test</label>
-
-                        <input type="radio" name="q1" id="q1c" value="">
-                        <label for="q1c">c. test</label>
-
-                        <input type="radio" name="q1" id="q1d" value="">
-                        <label for="q1d">d. test</label>-->
+                        <label><input type="radio" name="q1" value="a" onclick="setUserAnswer(0, 'a')">a. test</label>
+                        <label><input type="radio" name="q1" value="a" onclick="setUserAnswer(0, 'b')">b. test</label>
+                        <label><input type="radio" name="q1" value="a" onclick="setUserAnswer(0, 'c')">c. test</label>
+                        <label><input type="radio" name="q1" value="a" onclick="setUserAnswer(0, 'd')">d. test</label>
 
                     </div>
+
                 </div>
 
-                <div class="quiz-question-card">
-                    <div class="question"></div>
-                </div>
-                <div class="quiz-question-card">
-                    <div class="question"></div>
-                </div>
-                <div class="quiz-question-card">
-                    <div class="question"></div>
-                </div>
-                <div class="quiz-question-card">
-                    <div class="question"></div>
-                </div>
-                <div class="quiz-question-card">
-                    <div class="question"></div>
-                </div>
-                <div class="quiz-question-card">
-                    <div class="question"></div>
-                </div>
-                <div class="quiz-question-card">
-                    <div class="question"></div>
-                </div>
-                <div class="quiz-question-card">
-                    <div class="question"></div>
-                </div>
-                <div class="quiz-question-card">
-                    <div class="question"></div>
-                </div>
+
+       
 
                
 
