Error message displays when no topic is entered

--- a/src/practice.html
+++ b/src/practice.html
@@ -25,6 +25,10 @@
         <button class="generate-quiz-button">Generate Quiz</button>
     </div>
 
+    <div class="error-msg-position">
+        <div class="error-msg">Error: Please enter a topic</div>
+    </div>
+
     <section class="flashcard-section">
         <div class="flashcard-position">
             <div class="flashcard">
