--- a/src/calendar.html
+++ b/src/calendar.html
@@ -55,6 +55,19 @@
         <label for="event-end-time">End Time:</label>
         <input type="time" id="event-end-time" name="event-end-time" required>
 
+        <!-- Notification Settings -->
+        <label for="notification-setting">Notification:</label>
+        <div id="notification-setting">
+            <input type="number" id="notify-before-number" min="1" value="10" style="width: 50px;">
+            <select id="notify-before-type">
+                <option value="minutes">minutes</option>
+                <option value="hours">hours</option>
+                <option value="days" selected>days</option>
+                <option value="weeks">weeks</option>
+            </select>
+            <span> before the event</span>
+        </div>
+
         <!-- Create Event Button -->
         <button type="button" id="create-event">Create</button>
 
