--- a/src/calendar.html
+++ b/src/calendar.html
@@ -26,7 +26,6 @@
 
         <!-- PLANNED: ADD UPCOMING EVENTS BUTTON AND PANEL ON THE RIGHT TO SHOW -->
 
-
         <!-- Create Event Button -->
         <button id="create-event-button">Create Event</button>
     </header>
@@ -36,7 +35,10 @@
 
     <!-- Sidebar for Event Creation and Editing -->
     <div id="event-sidebar" class="event-sidebar">
-        <button id="close-sidebar-button" class="close-button">✖</button> <!-- Close button added here -->
+        <div class="drag-handle">
+            <span class="drag-text">☰ Drag</span>
+            <button id="close-sidebar-button" class="close-button">✖</button>
+        </div>
         <h2>Create Event</h2>
 
         <!-- Title Input -->
@@ -91,6 +93,7 @@
     <span> before the event</span>
 
     <!-- Sort and Filter Options -->
+     <!-- PLANNED: REMOVE? -->
     <button id="sortByDate">Sort by Date</button>
     <button id="sortByTitle">Sort by Title</button>
     <input type="text" id="filterKeyword" placeholder="Filter by keyword">
