added boxes in styles.css and index.html

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,18 @@
             Practice
         </a>
     </div>
-
+    <div class = "todo-list">
+        <h1>To-do List</h1>
+        <p>yayayayaqyayayayayayayayay</p>
+    </div>
+    <div class = "timer">
+        <p>yep</p>
+    </div>
+    <div class = "chatbot">
+        <p>yessir</p>
+    </div>
+    <div class = "gif">
+        <p>yessir</p>
+    </div>
 </body>
 </html>
