--- a/src/calendar.html
+++ b/src/calendar.html
@@ -4,19 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/index.global.min.css"
-      rel="stylesheet"
-    />
+
     <title>Study Buddy Calendar</title>
   </head>
   <body>
-    <header>
-      <a href="./index.html">
+    <header class="header">
+      <a href="./index.html" class="logo">
         <h1>Study Buddy</h1>
       </a>
 
-      <!-- PLANNED: WIGGLE WHEN NOTIFICATION APPEARS -->
+      <div class="header-right"></div>
       <!-- Notification Bell -->
       <div id="notification-container" class="notification-container">
         <span id="notification-bell" class="notification-bell">🔔</span>
@@ -28,14 +25,35 @@
       </div>
 
       <!-- Sign in and Sign out Buttons -->
-      <button onclick="handleSignInClick()">Sign in with Google</button>
-      <button onclick="handleSignOutClick()">Sign Out</button>
+      <button
+        id="sign-in-button"
+        class="google-button sign-in"
+        onclick="handleSignInClick()"
+        style="display: none;"
+      >
+      <img
+    src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg"
+    alt="Google Logo"
+  />
+        Sign in with Google
+      </button>
+      <button id="sign-out-button" onclick="handleSignOutClick()" style="display:none;">Sign Out</button>
+    </header>
 
-      <!-- PLANNED: ADD UPCOMING EVENTS BUTTON AND PANEL ON THE RIGHT TO SHOW -->
 
       <!-- Create Event Button -->
-      <button id="create-event-button">Create Event</button>
-    </header>
+      <button
+      id="sign-out-button"
+      class="google-button sign-out"
+      style="display: none"
+      onclick="handleSignOutClick()"
+    >
+      <img
+        src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg"
+        alt="Google Logo"
+      />
+      Sign Out
+    </button>
 
     <!-- Calendar -->
     <div id="calendar"></div>
@@ -130,15 +148,9 @@
     </select>
     <span> before the event</span>
 
-    <!-- Sort and Filter Options -->
-    <!-- PLANNED: REMOVE? -->
-    <button id="sortByDate">Sort by Date</button>
-    <button id="sortByTitle">Sort by Title</button>
-    <input type="text" id="filterKeyword" placeholder="Filter by keyword" />
-
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://apis.google.com/js/api.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/index.global.min.js"></script>
+    <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/index.global.min.js'></script>
     <script src="calendarscripts.js"></script>
   </body>
 </html>
